--- a/pricing-cards/index.html
+++ b/pricing-cards/index.html
@@ -51,21 +51,21 @@
                     <div class="card text-bg-dark rounded-4 shadow-lg border-0 mb-5">
                         <div class="card-body">
                             <div>
-                                <h4 class="fw-bold">Free</h4>
-                                <p class="text-white">For Freelancers</p>
-                                <h2 class="fs-1 fw-bold mt-4 mb-5">$0</h2>
+                                <h4 class="fw-bold">Pro</h4>
+                                <p class="text-white">For Porfessionals</p>
+                                <h2 class="fs-1 fw-bold mt-4 mb-5">$100</h2>
                                 <ul class="list-group list-group-flush fs-5 mb-5 ">
                                     <li class="list-group-item border-0 text-bg-dark">
-                                        <i class="bi bi-check2"></i> Single User
+                                        <i class="bi bi-check2"></i> Unlimited User
                                     </li>
                                     <li class="list-group-item border-0 text-bg-dark">
-                                        <i class="bi bi-check2"></i> 10 Downloads Per Month
+                                        <i class="bi bi-check2"></i> Unlimited Downloads
                                     </li>
                                     <li class="list-group-item border-0 text-bg-dark">
-                                        <i class="bi bi-check2"></i> Faster Files
+                                        <i class="bi bi-check2"></i> Fully-Editable Files
                                     </li>
                                     <li class="list-group-item border-0 text-bg-dark">
-                                        <i class="bi bi-check2"></i> 25 Custom Packs
+                                        <i class="bi bi-check2"></i> 250+ Custom Packs
                                     </li>
                                 </ul>
                                 <div class="d-grid">
