--- a/pricing-cards/index.html
+++ b/pricing-cards/index.html
@@ -52,7 +52,7 @@
                         <div class="card-body">
                             <div>
                                 <h4 class="fw-bold">Pro</h4>
-                                <p class="text-white">For Porfessionals</p>
+                                <p class="text-white">For Professionals</p>
                                 <h2 class="fs-1 fw-bold mt-4 mb-5">$100</h2>
                                 <ul class="list-group list-group-flush fs-5 mb-5 ">
                                     <li class="list-group-item border-0 text-bg-dark">
