--- a/ebook-website/index.html
+++ b/ebook-website/index.html
@@ -51,6 +51,7 @@
                 </div>
             </div>
         </nav>
+        <!-- Navigation -->
 
         <!-- Header -->
         <header class="header">
@@ -65,7 +66,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="text-container p-4 d-flex flex-column justify-content-center h-100 mb-5">
-                                <h1 class="display-3 fw-bold">Welcome to Blog Mastery</h1>
+                                <h1 class="display-3 fw-bold">Welcome to Blog Mastery&trade;</h1>
                                 <p class="lead">
                                     Are you ready to take your blogging journey to new heights? Blog Mastery is your
                                     ultimate guide to creating and managing a successful blog that captivates your
@@ -106,8 +107,47 @@
                     transform="translate(0 -158.755)" />
             </svg>
         </header>
+        <!-- Header -->
 
 
+        <!-- Icons Section-->
+        <section class="icons bg-light pb-5">
+            <div class="container-xl">
+                <div class="row hstack g-4">
+                    <!-- Column 1 -->
+                    <div class="col-md-4 d-flex gap-4">
+                        <i class="fa-solid fa-user fa-3x text-primary"></i>
+                        <div>
+                            <h5 class="fw-bold">Unlock Your Blogging Potential</h5>
+                            <p class="text-muted">Discover the key to unleashing your true blogging potential. Our ebook
+                                provides expert guidance on creating compelling content.</p>
+                        </div>
+                    </div>
+                    <!-- Column 1 -->
+                    <!-- Column 2 -->
+                    <div class="col-md-4 d-flex gap-4">
+                        <i class="fa-solid fa-rocket fa-3x text-secondary"></i>
+                        <div>
+                            <h5 class="fw-bold">Skyrocket Your Blog's Success</h5>
+                            <p class="text-muted">Take your blog to new heights with our proven strategies for driving
+                                traffic and increasing your blog's visibility.</p>
+                        </div>
+                    </div>
+                    <!-- Column 2 -->
+                    <!-- Column 3 -->
+                    <div class="col-md-4 d-flex gap-4">
+                        <i class="fa-solid fa-dollar-sign fa-3x text-primary"></i>
+                        <div>
+                            <h5 class="fw-bold">Monetize Your Blog</h5>
+                            <p class="text-muted">Turn your passion for blogging into a profitable venture. Our ebook
+                                reveals tried-and-tested monetization strategies.</p>
+                        </div>
+                    </div>
+                    <!-- Column 3 -->
+                </div>
+            </div>
+        </section>
+        <!-- Icons Section-->
         <script src="js/bootstrap.bundle.min.js"></script>
     </body>
 
