--- a/ebook-website/index.html
+++ b/ebook-website/index.html
@@ -91,7 +91,7 @@
                     </div>
                 </div>
             </div>
-
+            <!-- Background Image -->
             <svg class="frame-decoration" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg"
                 preserveAspectRatio="none" viewBox="0 0 1920 192.275">
                 <defs>
@@ -106,6 +106,7 @@
                     d="M0,158.755s63.9,52.163,179.472,50.736c121.494-1.5,185.839-49.738,305.984-49.733,109.21,0,181.491,51.733,300.537,50.233,123.941-1.562,225.214-50.126,390.43-50.374,123.821-.185,353.982,58.374,458.976,56.373,217.907-4.153,284.6-57.236,284.6-57.236V351.03H0V158.755Z"
                     transform="translate(0 -158.755)" />
             </svg>
+            <!-- Background Image -->
         </header>
         <!-- Header -->
 
@@ -148,6 +149,50 @@
             </div>
         </section>
         <!-- Icons Section-->
+        <!-- Details Section -->
+        <section class="details my-5" id="details">
+            <div class="container">
+                <div class="row">
+                    <!-- Left Column -->
+                    <div class="col-md-6">
+                        <div class="text-container d-flex flex-column justify-content-center h-100">
+                            <h2 class="display-6">Unlock Your Blogging Potential</h2>
+                            <p>Are you ready to unleash your true blogging potential? Our ebook, "Blog Mastery,"
+                                provides you with the tools and knowledge to take your blog to the next level.</p>
+                            <ul class="list-group list-group-flush lh-lg">
+                                <li class="list-group-item">
+                                    <i class="fa-solid fa-square text-primary"></i>
+                                    <strong>Unleash Your Creativity:</strong> Our ebook empowers you to unleash your
+                                    creativity and express your unique voice through your blog.
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fa-solid fa-square text-primary"></i>
+                                    <strong>Maximize Your Reach:</strong> Learn how to optimize your blog for search
+                                    engines.
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fa-solid fa-square text-primary"></i>
+                                    <strong>Monetization Strategies:</strong> Discover various monetization strategies,
+                                    such as sponsored content & affiliate marketing.
+                                </li>
+                            </ul>
+                            <button class="btn btn-primary btn-lg text-white mt-4 align-self-start"
+                                data-bs-toggle="modal" data-bs-target="#modal1">Get Your Copy
+                                Now</button>
+                        </div>
+                    </div>
+                    <!-- Left Column -->
+                    <!-- Right Column -->
+                    <div class="col-md-6">
+                        <div class="image-container p-5">
+                            <img src="img/description.png" alt="Prototype Blog Image" class="img-fluid">
+                        </div>
+                    </div>
+                    <!-- Right Column -->
+                </div>
+            </div>
+        </section>
+        <!-- Details Section -->
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
     </body>
