--- a/ebook-website/index.html
+++ b/ebook-website/index.html
@@ -192,6 +192,50 @@
                 </div>
             </div>
         </section>
+
+        <!-- Modal 1 -->
+        <div class="modal fade" id="modal1">
+            <div class="modal-dialog modal-lg mt-7">
+                <div class="modal-content p-5">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="image-container">
+                                <img src="img/description.png" alt="Prototype Blog Image" class="img-fluid">
+                            </div>
+                        </div>
+
+                        <div class="col-lg-6">
+                            <div class="text-container">
+                                <h2 class="display-6">Unlock Your Blogging Potential</h2>
+                                <p>Are you ready to unleash your true blogging potential? Our ebook, "Blog Mastery,"
+                                    provides you with the tools and knowledge to take your blog to the next level.</p>
+                                <ul class="list-group list-group-flush lh-lg">
+                                    <li class="list-group-item">
+                                        <i class="fa-solid fa-square text-primary"></i>
+                                        <strong>Unleash Your Creativity:</strong> Our ebook empowers you to unleash your
+                                        creativity and express your unique voice through your blog.
+                                    </li>
+                                    <li class="list-group-item">
+                                        <i class="fa-solid fa-square text-primary"></i>
+                                        <strong>Maximize Your Reach:</strong> Learn how to optimize your blog for search
+                                        engines.
+                                    </li>
+                                    <li class="list-group-item">
+                                        <i class="fa-solid fa-square text-primary"></i>
+                                        <strong>Monetization Strategies:</strong> Discover various monetization
+                                        strategies,
+                                        such as sponsored content & affiliate marketing.
+                                    </li>
+                                </ul>
+                                <button class="btn btn-primary text-white">Free Download</button>
+                                <button class="btn btn-light text-dark" data-bs-dismiss='modal'>Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Modal 1 -->
         <!-- Details Section -->
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
