--- a/ebook-website/index.html
+++ b/ebook-website/index.html
@@ -149,12 +149,12 @@
             </div>
         </section>
         <!-- Icons Section-->
-        <!-- Details Section -->
+        <!-- Details Section 1 -->
         <section class="details my-5" id="details">
             <div class="container">
                 <div class="row">
                     <!-- Left Column -->
-                    <div class="col-md-6">
+                    <div class="col-lg-6">
                         <div class="text-container d-flex flex-column justify-content-center h-100">
                             <h2 class="display-6">Unlock Your Blogging Potential</h2>
                             <p>Are you ready to unleash your true blogging potential? Our ebook, "Blog Mastery,"
@@ -183,7 +183,7 @@
                     </div>
                     <!-- Left Column -->
                     <!-- Right Column -->
-                    <div class="col-md-6">
+                    <div class="col-lg-6">
                         <div class="image-container p-5">
                             <img src="img/description.png" alt="Prototype Blog Image" class="img-fluid">
                         </div>
@@ -192,6 +192,7 @@
                 </div>
             </div>
         </section>
+        <!-- Details Section 1 -->
 
         <!-- Modal 1 -->
         <div class="modal fade" id="modal1">
@@ -256,7 +257,50 @@
             </div>
         </section>
         <!-- Statement -->
-        <!-- Details Section -->
+        <!-- Details Section 2 -->
+        <section class="details my-5">
+            <div class="container">
+                <div class="row">
+                    <!-- Left Column -->
+                    <div class="col-lg-6">
+                        <div class="image-container p-5">
+                            <img src="img/author.png" alt="Author Image" class="img-fluid">
+                        </div>
+                    </div>
+                    <!-- Left Column -->
+                    <!-- Right Column -->
+                    <div class="col-lg-6">
+                        <div class="text-container d-flex flex-column justify-content-center h-100">
+                            <h2 class="display-6">Craft Remarkable Content</h2>
+                            <p>Discover techniques for effective storytelling, engaging visuals, and compelling
+                                calls-to-action. Unlock the secrets of creating a consistent and authentic brand voice
+                                that sets you apart from the competition.</p>
+                            <ul class="list-group list-group-flush lh-lg">
+                                <li class="list-group-item">
+                                    <i class="fa-solid fa-square text-primary"></i>
+                                    <strong>Embrace Your Unique Voice:</strong> Learn how to harness the power of your
+                                    unique voice.
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fa-solid fa-square text-primary"></i>
+                                    <strong>Spark Creativity:</strong> Explore techniques to spark creativity and
+                                    overcome writer's block.
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fa-solid fa-square text-primary"></i>
+                                    <strong>Engage Your Readers:</strong> Discover strategies for creating content that
+                                    engages your readers on a deeper level.
+                                </li>
+                            </ul>
+                            <button class="btn btn-primary btn-lg text-white mt-4 align-self-start"
+                                data-bs-toggle="modal" data-bs-target="#modal2">Learn More</button>
+                        </div>
+                    </div>
+                    <!-- Right Column -->
+                </div>
+            </div>
+        </section>
+        <!-- Details Section 2 -->
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
     </body>
