--- a/ebook-website/index.html
+++ b/ebook-website/index.html
@@ -199,18 +199,20 @@
             <div class="modal-dialog modal-lg mt-7">
                 <div class="modal-content p-5">
                     <div class="row">
+                        <!-- Left Column -->
                         <div class="col-lg-6">
                             <div class="image-container">
                                 <img src="img/description.png" alt="Prototype Blog Image" class="img-fluid">
                             </div>
                         </div>
-
+                        <!-- Left Column -->
+                        <!-- Right Column -->
                         <div class="col-lg-6">
                             <div class="text-container">
                                 <h2 class="display-6">Unlock Your Blogging Potential</h2>
                                 <p>Are you ready to unleash your true blogging potential? Our ebook, "Blog Mastery,"
                                     provides you with the tools and knowledge to take your blog to the next level.</p>
-                                <ul class="list-group list-group-flush lh-lg">
+                                <ul class="list-group list-group-flush lh-lg pb-4">
                                     <li class="list-group-item">
                                         <i class="fa-solid fa-square text-primary"></i>
                                         <strong>Unleash Your Creativity:</strong> Our ebook empowers you to unleash your
@@ -232,6 +234,7 @@
                                 <button class="btn btn-light text-dark" data-bs-dismiss='modal'>Close</button>
                             </div>
                         </div>
+                        <!-- Right Column -->
                     </div>
                 </div>
             </div>
@@ -301,6 +304,56 @@
             </div>
         </section>
         <!-- Details Section 2 -->
+
+        <!-- Modal 2 -->
+        <div class="modal fade" id="modal2">
+            <div class="modal-dialog modal-lg mt-7">
+                <div class="modal-content p-5">
+                    <div class="row">
+                        <!-- Left Column -->
+                        <div class="col-lg-6">
+                            <div class="image-container">
+                                <img src="img/author.png" alt="Prototype Blog Image" class="img-fluid">
+                            </div>
+                        </div>
+                        <!-- Left Column -->
+                        <!-- Right Column -->
+                        <div class="col-lg-6">
+                            <div class="text-container">
+                                <h2 class="display-6">Craft Remarkable Content</h2>
+                                <p>Discover techniques for effective storytelling, engaging visuals, and compelling
+                                    calls-to-action. Unlock the secrets of creating a consistent and authentic brand
+                                    voice
+                                    that sets you apart from the competition.</p>
+                                <ul class="list-group list-group-flush lh-lg pb-4">
+                                    <li class="list-group-item">
+                                        <i class="fa-solid fa-square text-primary"></i>
+                                        <strong>Embrace Your Unique Voice:</strong> Learn how to harness the power of
+                                        your
+                                        unique voice.
+                                    </li>
+                                    <li class="list-group-item">
+                                        <i class="fa-solid fa-square text-primary"></i>
+                                        <strong>Spark Creativity:</strong> Explore techniques to spark creativity and
+                                        overcome writer's block.
+                                    </li>
+                                    <li class="list-group-item">
+                                        <i class="fa-solid fa-square text-primary"></i>
+                                        <strong>Engage Your Readers:</strong> Discover strategies for creating content
+                                        that
+                                        engages your readers on a deeper level.
+                                    </li>
+                                </ul>
+                                <button class="btn btn-primary text-white">Free Download</button>
+                                <button class="btn btn-light text-dark" data-bs-dismiss='modal'>Close</button>
+                            </div>
+                        </div>
+                        <!-- Right Column -->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Modal 2 -->
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
     </body>
