--- a/ebook-website/index.html
+++ b/ebook-website/index.html
@@ -354,6 +354,46 @@
             </div>
         </div>
         <!-- Modal 2 -->
+
+        <!-- Testimonials -->
+        <section class="testimonials mb-8">
+            <div class="container">
+                <div class="row">
+                    <!-- Left Column -->
+                    <div class="col-md-4 text-center">
+                        <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="" class="rounded-circle mb-3">
+                        <p class="lead fst-italic">"This ebook completely transformed my blogging journey. The practical
+                            strategies and valuable insights helped me take my blog to new heights. I highly recommend
+                            it!"
+                        </p>
+                        <p class="fw-bold">Patrick Jones - San Francisco, CA</p>
+                    </div>
+                    <!-- Left Column -->
+                    <!-- Center Column -->
+                    <div class="col-md-4 text-center">
+                        <img src="https://randomuser.me/api/portraits/women/32.jpg" alt="" class="rounded-circle mb-3">
+                        <p class="lead fst-italic">"I'm so grateful for this ebook! It provided me with the guidance and
+                            inspiration I needed to create engaging content and build a loyal readership. It's a
+                            game-changer!"
+                        </p>
+                        <p class="fw-bold">Linda Chapman - Austin, TX</p>
+                    </div>
+                    <!-- Center Column -->
+                    <!-- Right Column -->
+                    <div class="col-md-4 text-center">
+                        <img src="https://randomuser.me/api/portraits/men/9.jpg" alt="" class="rounded-circle mb-3">
+                        <p class="lead fst-italic">"I can't recommend this ebook enough. It's a treasure of blogging
+                            wisdom.
+                            It helped me unlock my creativity, connect with my audience, and achieve remarkable
+                            results."
+                        </p>
+                        <p class="fw-bold">Jeff Lambert - Nashville, TN</p>
+                    </div>
+                    <!-- Right Column -->
+                </div>
+            </div>
+        </section>
+        <!-- Testimonials -->
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
     </body>
