--- a/ebook-website/index.html
+++ b/ebook-website/index.html
@@ -394,6 +394,41 @@
             </div>
         </section>
         <!-- Testimonials -->
+
+        <!-- Download Section -->
+        <section class="download">
+            <div class="container">
+                <div class="row">
+                    <!-- Left Columns -->
+                    <div class="col-lg-5">
+                        <div class="image-container mt-n6 mb-5">
+                            <img src="img/download-ebook.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                    <!-- Left Column -->
+                    <!-- Right Column -->
+                    <div class="col-lg-7">
+                        <div class="text-container text-white d-flex flex-column justify-content-center h-100 mb-5">
+                            <h2 class="fw-bold">Get Your Free Ebook Now</h2>
+                            <p>Unlock the power of knowledge and take your blogging journey to the next level. Our
+                                ebook, "Blog Mastery: The Ultimate Guide to Blogging Success," is your key to success.
+                            </p>
+
+                            <!-- Form -->
+                            <form>
+                                <div class="input-group mb-3">
+                                    <input type="email" class="form-control" placeholder="Email Address">
+                                    <button class="btn btn-primary text-white rounded-end">Download</button>
+                                </div>
+                            </form>
+                            <!-- Form -->
+                        </div>
+                    </div>
+                    <!-- Right Column -->
+                </div>
+            </div>
+        </section>
+        <!-- Download Section -->
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
     </body>
