--- a/ebook-website/index.html
+++ b/ebook-website/index.html
@@ -429,6 +429,42 @@
             </div>
         </section>
         <!-- Download Section -->
+
+        <!--  Social Section -->
+        <section class="social text-bg-dark py-6 overflow-hidden">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 offset-md-3 text-center fs-4">
+                        <p>Stay connected and join our vibrant community. For any inquiries or assistance, feel free to
+                            reach out to us!</p>
+                        <div class="social-icons mt-4 d-flex justify-content-center gap-4">
+                            <a href="#" class="text-light">
+                                <i class="fa-brands fa-facebook fa-2x"></i>
+                            </a>
+                            <a href="#" class="text-light">
+                                <i class="fa-brands fa-x-twitter fa-2x"></i>
+                            </a>
+                            <a href="#" class="text-light">
+                                <i class="fa-brands fa-instagram fa-2x"></i>
+                            </a>
+                            <a href="#" class="text-light">
+                                <i class="fa-brands fa-tiktok fa-2x"></i>
+                            </a>
+                            <a href="#" class="text-light">
+                                <i class="fa-brands fa-youtube fa-2x"></i>
+                            </a>
+                            <a href="#" class="text-light">
+                                <i class="fa-brands fa-linkedin fa-2x"></i>
+                            </a>
+                            <a href="#" class="text-light">
+                                <i class="fa-brands fa-pinterest fa-2x"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--  Social Section -->
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
     </body>
