--- a/ebook-website/index.html
+++ b/ebook-website/index.html
@@ -430,7 +430,7 @@
         </section>
         <!-- Download Section -->
 
-        <!--  Social Section -->
+        <!--  Socials Section -->
         <section class="social text-bg-dark py-6 overflow-hidden">
             <div class="container">
                 <div class="row">
@@ -464,7 +464,38 @@
                 </div>
             </div>
         </section>
-        <!--  Social Section -->
+        <!--  Socials Section -->
+
+        <!-- Footer -->
+        <footer class="border-top border-primary bg-dark text-white py-4">
+            <div class="container">
+                <div class="row">
+                    <!-- Left Column -->
+                    <div class="col-md-8">
+                        <ul class="nav">
+                            <li class="nav-item">
+                                <a href="index.html" class="nav-link link-light">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#details" class="nav-link link-light">Details</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="contact.html" class="nav-link link-light">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- Left Column -->
+                    <!-- Right Column -->
+                    <div class="col-md-4">
+                        <p class="text-end d-none d-md-block">
+                            Copyright &copy; Blog Mastery 2023
+                        </p>
+                    </div>
+                    <!-- Right Column -->
+                </div>
+            </div>
+        </footer>
+        <!-- Footer -->
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
     </body>
