--- a/ebook-website/index.html
+++ b/ebook-website/index.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
             <div class="container">
                 <a href="index.html" class="navbar-brand">
-                    <img src="img/logo.png" alt="Logo" width="225">
+                    <img src="img/logo.png" alt="Logo" width="225" class="logo">
                 </a>
                 <!-- Hamburger Menu -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -33,19 +33,18 @@
                 <!-- Menu -->
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-tem">
+                        <li class="nav-item">
                             <a href="index.html" class="nav-link fw-semibold">Home</a>
                         </li>
-                        <li class="nav-tem">
+                        <li class="nav-item">
                             <a href="#details" class="nav-link fw-semibold">Details</a>
                         </li>
                         <li class="nav-item">
                             <form action="contact.html">
-                                <button class="btn btn-outline-light px-4 mx-4 fw-semibold">
+                                <a class="btn btn-outline-light px-4 mx-4 fw-semibold gap-0">
                                     Contact
-                                </button>
+                                </a>
                             </form>
-
                         </li>
                     </ul>
                 </div>
