--- a/ebook-website/index.html
+++ b/ebook-website/index.html
@@ -41,9 +41,9 @@
                         </li>
                         <li class="nav-item">
                             <form action="contact.html">
-                                <a class="btn btn-outline-light px-4 mx-4 fw-semibold gap-0">
+                                <button class="btn btn-outline-light px-4 mx-4 fw-semibold gap-0">
                                     Contact
-                                </a>
+                                </button>
                             </form>
                         </li>
                     </ul>
