--- a/vera-software-solutions/index.html
+++ b/vera-software-solutions/index.html
@@ -16,7 +16,56 @@
     </head>
 
     <body>
-        <h1>Corso Training Website</h1>
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+            <div class="container">
+                <a href="index.html" class="navbar-brand">
+                    <img src="img/logo.png" alt="Corso Logo" width="150">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a href="#home" class="nav-link" aria-current="page">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#discover" class="nav-link">Discover</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#summary" class="nav-link">Summary</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#takeaways" class="nav-link">Takeaways</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#subscribe" class="nav-link">Subscribe</a>
+                        </li>
+                    </ul>
+                    <span class="nav-item">
+                        <span class="fa-stack">
+                            <a href="#">
+                                <i class="fa-solid fa-circle fa-stack-2x"></i>
+                                <i class="fa-brands fa-facebook-f fa-stack-1x text-white"></i>
+                            </a>
+                        </span>
+                    </span>
+                    <span class="nav-item">
+                        <span class="fa-stack">
+                            <a href="#">
+                                <i class="fa-solid fa-circle fa-stack-2x"></i>
+                                <i class="fa-brands fa-x-twitter fa-stack-1x text-white"></i>
+                            </a>
+                        </span>
+                    </span>
+                </div>
+            </div>
+        </nav>
+
+        <!-- Navbar -->
         <script src="js/bootstrap.bundle.min.js"></script>
     </body>
 
