--- a/vera-software-solutions/index.html
+++ b/vera-software-solutions/index.html
@@ -98,13 +98,16 @@
 
                             <div class="carousel-inner rounded-5">
                                 <div class="carousel-item active">
-                                    <img src="img/header-slide-1.jpg" alt="" class="d-block w-100 rounded-5">
+                                    <img src="img/header-slide-1.jpg" alt="Class In Session"
+                                        class="d-block w-100 rounded-5">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="img/header-slide-2.jpg" alt="" class="d-block w-100 rounded-5">
+                                    <img src="img/header-slide-2.jpg" alt="Student Conversing"
+                                        class="d-block w-100 rounded-5">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="img/header-slide-3.jpg" alt="" class="d-block w-100 rounded-5">
+                                    <img src="img/header-slide-3.jpg" alt="Students On Break"
+                                        class="d-block w-100 rounded-5">
                                 </div>
                             </div>
                             <!-- Carousel Inner -->
@@ -186,7 +189,33 @@
         </section>
         <!-- Register -->
 
+        <!-- Details 1 -->
+        <section class="details py-6 bg-light" id="discover">
+            <div class="container">
+                <div class="row">
+                    <!-- Left Column -->
+                    <div class="col-lg-6">
+                        <img src="img/instructor.jpg" alt="Male Instructor" class="img-fluid rounded-5 mb-4">
+                    </div>
+                    <!-- Left Column -->
+                    <!-- Right Column -->
+                    <div class="col-lg-6 d-flex flex-column justify-content-center">
+                        <h2>Enhance Your Skills with Engaging Training Videos</h2>
+                        <p>Our extensive collection of training videos is designed to help you enhance your skills and
+                            excel in your chosen field. Whether you're looking to improve your technical expertise or
+                            develop essential soft skills, our videos provide valuable insights and practical knowledge.
+                        </p>
+                        <p>With expert instructors and comprehensive content, you'll gain the confidence and competence
+                            to tackle challenges and achieve success.</p>
+                    </div>
+                    <!-- Right Column -->
+                </div>
+            </div>
+        </section>
+        <!-- Details 1 -->
+
         <script src="js/bootstrap.bundle.min.js"></script>
+        <script src="js/script.js"></script>
     </body>
 
 </html>
