--- a/vera-software-solutions/index.html
+++ b/vera-software-solutions/index.html
@@ -195,7 +195,9 @@
                 <div class="row">
                     <!-- Left Column -->
                     <div class="col-lg-6">
-                        <img src="img/instructor.jpg" alt="Male Instructor" class="img-fluid rounded-5 mb-4">
+                        <img src="img/instructor.jpg" alt="Male Instructor" class="img-fluid rounded-5">
+                        <figcaption class="figure-captio text-center mb-4">Richard Logan, Seminar Instructor.
+                        </figcaption>
                     </div>
                     <!-- Left Column -->
                     <!-- Right Column -->
@@ -343,6 +345,33 @@
             </div>
         </section>
         <!-- Course Summary Section -->
+
+        <!-- Details 2 -->
+        <section class="details py-6 bg-light">
+            <div class="container">
+                <div class="row">
+                    <!-- Left Column -->
+                    <div class="col-lg-6 d-flex flex-column justify-content-center">
+                        <h2>Elevate Your Learning Journey with Expert Seminars</h2>
+                        <p>OJoin our expert-led seminars and unlock new possibilities in your personal and professional
+                            development. Our seminars cover a diverse range of topics, from leadership and innovation to
+                            personal growth and productivity.
+                        </p>
+                        <p>Immerse yourself in engaging discussions, interactive workshops, and valuable networking
+                            opportunities.</p>
+                    </div>
+                    <!-- Left Column -->
+                    <!-- Right Column -->
+                    <div class="col-lg-6">
+                        <img src="img/audience.jpg" alt="Male Instructor" class="img-fluid rounded-5">
+                        <figcaption class="figure-captio text-center mb-4">Our New Content Creator Seminar, Coming 2024.
+                        </figcaption>
+                    </div>
+                    <!-- Right Column -->
+                </div>
+            </div>
+        </section>
+        <!-- Details 2 -->
 
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
