--- a/vera-software-solutions/index.html
+++ b/vera-software-solutions/index.html
@@ -373,6 +373,28 @@
         </section>
         <!-- Details 2 -->
 
+        <!-- Invitation Section -->
+        <section class="invitation mb-5 bg-light">
+            <div class="container">
+                <div class="col-12">
+                    <div class="invitation-bg text-center py-6 rounded-5">
+                        <div class="text-white w-75 m-auto">
+                            <h2 class="display-5 fw-bold">
+                                Join Us On December 22nd
+                            </h2>
+                            <p>We cordially invite you to attend a seminar on December 22nd, where we will explore
+                                various topics and insights related to advertising and marketing. It will be an engaging
+                                session where you can gain valuable knowledge about. Don't miss out on this opportunity
+                                to enhance your skills and broaden your horizons. Join us and be a part of this
+                                enriching experience!</p>
+                            <a href="#register" class="btn btn-primary btn-lg">Register Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Invitation Section -->
+
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
     </body>
