--- a/vera-software-solutions/index.html
+++ b/vera-software-solutions/index.html
@@ -374,7 +374,7 @@
         <!-- Details 2 -->
 
         <!-- Invitation Section -->
-        <section class="invitation mb-5 bg-light">
+        <section class="invitation bg-light mb-5">
             <div class="container">
                 <div class="col-12">
                     <div class="invitation-bg text-center py-6 rounded-5">
@@ -394,6 +394,92 @@
             </div>
         </section>
         <!-- Invitation Section -->
+
+        <!-- Takeaways Section -->
+        <section class="takeaways my-5 bg-light" id="takeaways">
+            <div class="container">
+                <div class="row text-center mb-5">
+                    <div class="col-md-8 offset-md-2">
+                        <h1>Key Takeaways</h1>
+                        <p class="lead">
+                            Here are some of the takeaways and benefits you can expect from our programs.
+                        </p>
+                    </div>
+                </div>
+                <!-- Row 1 -->
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card mb-4 rounded-0 border-0 p-3">
+                            <div class="card-body text-center bg-white">
+                                <i class="fa-solid fa-atom fa-3x text-primary bg-light rounded-circle p-3 my-4"></i>
+                                <h5 class="card-title">Scientific Insights</h5>
+                                <p class="card-text">Explore the latest scientific research and gain valuable insights
+                                    into various subjects, from physics to biology.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4 rounded-0 border-0 p-3">
+                            <div class="card-body text-center bg-white">
+                                <i class="fa-solid fa-key fa-3x text-primary bg-light rounded-circle p-3 my-4"></i>
+                                <h5 class="card-title">Cybersecurity Awareness</h5>
+                                <p class="card-text">Discover the importance of cybersecurity and learn how to protect
+                                    yourself and your digital assets from cyber threats.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4 rounded-0 border-0 p-3">
+                            <div class="card-body text-center bg-white">
+                                <i
+                                    class="fa-solid fa-newspaper fa-3x text-primary bg-light rounded-circle p-3 my-4"></i>
+                                <h5 class="card-title">Industry Updates</h5>
+                                <p class="card-text">Stay informed about the latest news and updates in your industry,
+                                    keeping you ahead of the curve and facilitating professional growth.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Row 1 -->
+                <!-- Row 2-->
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card mb-4 rounded-0 border-0 p-3">
+                            <div class="card-body text-center bg-white">
+                                <i class="fa-solid fa-users fa-3x text-primary bg-light rounded-circle p-3 my-4"></i>
+                                <h5 class="card-title">Collaborative Networking</h5>
+                                <p class="card-text">Connect with professionals from diverse backgrounds and industries
+                                    to foster collaboration and expand your professional network.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4 rounded-0 border-0 p-3">
+                            <div class="card-body text-center bg-white">
+                                <i
+                                    class="fa-solid fa-handshake fa-3x text-primary bg-light rounded-circle p-3 my-4"></i>
+                                <h5 class="card-title">Partnership Opportunities</h5>
+                                <p class="card-text">Discover potential partnership opportunities with like-minded
+                                    individuals and organizations, opening doors to new collaborations and ventures.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4 rounded-0 border-0 p-3">
+                            <div class="card-body text-center bg-white">
+                                <i
+                                    class="fa-solid fa-chart-bar fa-3x text-primary bg-light rounded-circle p-3 my-4"></i>
+                                <h5 class="card-title">Data-driven Insights</h5>
+                                <p class="card-text">Leverage data analytics to gain valuable insights and make informed
+                                    decisions, unlocking new possibilities for growth and success.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Row 2 -->
+            </div>
+        </section>
+        <!-- Takeaways Section -->
 
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
