--- a/vera-software-solutions/index.html
+++ b/vera-software-solutions/index.html
@@ -481,6 +481,29 @@
         </section>
         <!-- Takeaways Section -->
 
+        <!-- Subscribe Form -->
+        <section class="subscribe my-5" id="subscribe">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 offset-md-3 text-center">
+                        <h2>Subscribe to our email list and get updates from the experts</h2>
+                        <form>
+                            <div class="my-4">
+                                <input type="email" class="form-control form-control-llg" placeholder="Enter Email">
+                                <div class="form-text">
+                                    **Your private information is never sold or shared**
+                                </div>
+                            </div>
+                            <div class="d-grid">
+                                <button class="btn btn-primary">Subscribe</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Subscribe Form -->
+
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
     </body>
