--- a/vera-software-solutions/index.html
+++ b/vera-software-solutions/index.html
@@ -15,7 +15,7 @@
         <title>Corso Training</title>
     </head>
 
-    <body>
+    <body id="home">
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
             <div class="container">
@@ -504,6 +504,46 @@
         </section>
         <!-- Subscribe Form -->
 
+        <!-- Footer -->
+        <footer class="footer mt-4 text-bg-dark py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h3>Our Location:</h3>
+                        <p>123 Fake Street <br>
+                            San Francisco, CA 94105
+                            <br>
+                            <a href="callto:5555555555">(555) 555-5555</a>
+                        </p>
+                        <br>
+                        <h3>Our Email:</h3>
+                        <a href="mailto:">info@verasaas.com</a>
+                    </div>
+                    <div class="col-md-4">
+                        <h3>Quick Links</h3>
+                        <ul class="list-unstyled">
+                            <li><a href="#home">Home</a></li>
+                            <li><a href="#discover">Discover</a></li>
+                            <li><a href="#summary">Summary</a></li>
+                            <li><a href="#takeaways">Takeaways</a></li>
+                            <li><a href="#subscribe">Subscribe</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <h3>Follow Us:</h3>
+                        <div class="d-flex gap-3 socials">
+                            <a href="#"><i class="fa-brands fa-facebook fa-3x text-white"></i></a>
+                            <a href="#"><i class="fa-brands fa-x-twitter fa-3x text-white"></i></a>
+                            <a href="#"><i class="fa-brands fa-linkedin fa-3x text-white"></i></a>
+                            <a href="#"><i class="fa-brands fa-instagram fa-3x text-white"></i></a>
+                            <a href="#"><i class="fa-brands fa-youtube fa-3x text-white"></i></a>
+                            <a href="#"><i class="fa-brands fa-tiktok fa-3x text-white"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- Footer -->
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
     </body>
