--- a/vera-software-solutions/index.html
+++ b/vera-software-solutions/index.html
@@ -508,7 +508,7 @@
         <footer class="footer mt-4 text-bg-dark py-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4 mb-5">
                         <h3>Our Location:</h3>
                         <p>123 Fake Street <br>
                             San Francisco, CA 94105
@@ -519,7 +519,7 @@
                         <h3>Our Email:</h3>
                         <a href="mailto:">info@verasaas.com</a>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 mb-5">
                         <h3>Quick Links</h3>
                         <ul class="list-unstyled">
                             <li><a href="#home">Home</a></li>
@@ -530,8 +530,9 @@
                         </ul>
                     </div>
                     <div class="col-md-4">
-                        <h3>Follow Us:</h3>
+                        <h3 class="mb-3">Follow Us:</h3>
                         <div class="d-flex gap-3 socials">
+
                             <a href="#"><i class="fa-brands fa-facebook fa-3x text-white"></i></a>
                             <a href="#"><i class="fa-brands fa-x-twitter fa-3x text-white"></i></a>
                             <a href="#"><i class="fa-brands fa-linkedin fa-3x text-white"></i></a>
