typing effect js

--- a/portfolio-website/index.html
+++ b/portfolio-website/index.html
@@ -14,7 +14,8 @@
             rel="stylesheet">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/lightbox.min.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/bootstrap.css">
+        <link rel="stylesheet" href="css/styles.css">
         <title>Portfolio Page</title>
     </head>
 
@@ -25,8 +26,7 @@
                 <h5 class="text-primary fs-3 fw-bold text-uppercase">
                     Hello, World
                 </h5>
-                <h1 class="display-1 fw-bold text-white" id="typing-text">
-                    I am Chad Powers
+                <h1 id="typing-text" class="display-1 fw-bold text-white">
                 </h1>
                 <p class="roles text-white text-upper fs-4">
                     <span>Full Stack Web Developer | </span>
