--- a/portfolio-website/index.html
+++ b/portfolio-website/index.html
@@ -274,6 +274,52 @@
         </section>
         <!-- StyleShout -->
 
+        <!-- Services -->
+        <section class="services text-bg-dark py-5 position-relative">
+            <div class="container position-relative">
+                <div class="text-center mb-5">
+                    <h4 class="text-uppercase fw-bold text-primary">Services</h4>
+                    <hr class="w-25 mx-auto">
+                    <h2 class="mb-4">What Can I Do For You?</h2>
+                    <p class="lead">Here are some of the services that I offer when it comes to web development and
+                        business.</p>
+                </div>
+                <div class="row">
+                    <!-- Left Column -->
+                    <div class="col-md-4 text-center">
+                        <i class="fa-solid fa-globe fa-3x text-primary mb-3"></i>
+                        <h3 class="fs-3">Web Design</h3>
+                        <hr class="w-25 mx-auto">
+                        <p class="fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis laborum
+                            sint unde quos ad, assumenda alias minus ex mollitia impedit?
+                        </p>
+                    </div>
+                    <!-- Left Column -->
+                    <!-- Middle Column -->
+                    <div class="col-md-4 text-center">
+                        <i class="fa-solid fa-globe fa-3x text-primary mb-3"></i>
+                        <h3 class="fs-3">Web Development</h3>
+                        <hr class="w-25 mx-auto">
+                        <p class="fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis laborum
+                            sint unde quos ad, assumenda alias minus ex mollitia impedit?
+                        </p>
+                    </div>
+                    <!-- Middle Column -->
+                    <!-- Right Column -->
+                    <div class="col-md-4 text-center">
+                        <i class="fa-solid fa-globe fa-3x text-primary mb-3"></i>
+                        <h3 class="fs-3">Advetising & SEO</h3>
+                        <hr class="w-25 mx-auto">
+                        <p class="fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis laborum
+                            sint unde quos ad, assumenda alias minus ex mollitia impedit?
+                        </p>
+                    </div>
+                    <!-- Right Column -->
+                </div>
+            </div>
+        </section>
+        <!-- Services -->
+
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/lightbox-plus-jquery.min.js"></script>
         <script src="js/script.js"></script>
