navbar smooth scrolling

--- a/yavin-office-design/index.html
+++ b/yavin-office-design/index.html
@@ -91,6 +91,7 @@
         <!-- Header -->
 
         <script src="js/bootstrap.bundle.min.js"></script>
+        <script src="js/script.js"></script>
     </body>
 
 </html>
