--- a/yavin-office-design/index.html
+++ b/yavin-office-design/index.html
@@ -117,8 +117,8 @@
         <section class="intro bg-light py-6" id="introduction">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 offset-md-2 text-center">
-                        <h2>Creating <span class="text-secondary">Unique</span> Office Spaces</h2>
+                    <div class="col-md-8 offset-lg-2 text-center">
+                        <h2>Creating <span class="text-secondary">Inspiring</span> Office Spaces</h2>
                         <p class="fs-5">
                             At our company, designing office spaces is our passion. We take pride in our completed
                             projects that reflect our dedication and expertise in creating functional and aesthetically
@@ -129,6 +129,53 @@
             </div>
         </section>
         <!-- Introduction -->
+
+        <!-- Details 1 -->
+        <section class="details position-relative my-6 overflow-hidden" id="details">
+            <img src="images/decoration-star.svg" alt="" class="decoration-star position-absolute" />
+            <div class="container position-relative z-3">
+                <div class="row">
+                    <!-- Left Column -->
+                    <div class="col-lg-6">
+                        <div class="image-container d-flex justify-content-center">
+                            <img src="images/details-1.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                    <!-- Left Column -->
+                    <!-- Right Column -->
+                    <div class="col-lg-6">
+                        <div class="mt-4">
+                            <h2 class="mb-4">Create <span class="text-primary">Unique</span> Office Spaces</h2>
+                            <ul class="list-unstyled">
+                                <li class="d-flex mb-3">
+                                    <i class="fa-solid fa-check fa-2x text-primary mx-4"></i>
+                                    <p>Our approach ensures that every office space is tailored to the unique needs and
+                                        preferences of our clients. No two spaces look the same.</p>
+                                </li>
+                                <li class="d-flex mb-3">
+                                    <i class="fa-solid fa-check fa-2x text-primary mx-4"></i>
+                                    <p>We pay attention to every detail, ensuring that the design elements, furniture,
+                                        and decor create a harmonious and inspiring atmosphere.</p>
+                                </li>
+                                <li class="d-flex mb-3">
+                                    <i class="fa-solid fa-check fa-2x text-primary mx-4"></i>
+                                    <p>Our team of experts guarantees that your office space will be a reflection of
+                                        your brand identity and company culture.</p>
+                                </li>
+                                <li class="d-flex mb-3">
+                                    <i class="fa-solid fa-check fa-2x text-primary mx-4"></i>
+                                    <p>Existence as discourse is. Pleasure friendly at marriage blessing or should.</p>
+                                </li>
+                                <a href="article.html" class="btn btn-primary">Get Started</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Right Column -->
+            </div>
+            </div>
+            </header>
+        </section>
+        <!-- Details 1 -->
 
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
