--- a/yavin-office-design/index.html
+++ b/yavin-office-design/index.html
@@ -177,6 +177,57 @@
         </section>
         <!-- Details 1 -->
 
+        <!-- Services -->
+        <section class="services bg-light py-6" id="services">
+            <div class="container">
+                <div class="row">
+                    <!-- Left Colum -->
+                    <div class="col-lg-5">
+                        <div class="text-container text-center text-lg-start">
+                            <h2><span class="text-secondary">Services</span> that we offer:</h2>
+                            <p>At our company, we provide a wide range of services to meet all your office design needs.
+                                With our expertise and attention to detail, we ensure that every aspect of your office
+                                space is carefully considered and executed.</p>
+                        </div>
+                    </div>
+                    <!-- Left Column -->
+                    <!-- Right Column -->
+                    <div class="col-lg-7">
+                        <div class="row mb-4">
+                            <div class="col-md-4 d-flex flex-column align-items-center text-center">
+                                <i class="fa-solid fa-map fa-4x text-secondary mb-2"></i>
+                                <p class="fs-5 fw-bold">Space Analysis & Planning</p>
+                            </div>
+                            <div class="col-md-4 d-flex flex-column align-items-center text-center">
+                                <i class="fa-solid fa-droplet fa-4x text-secondary mb-2"></i>
+                                <p class="fs-5 fw-bold">Design & Color Choosing</p>
+                            </div>
+                            <div class="col-md-4 d-flex flex-column align-items-center text-center">
+                                <i class="fa-solid fa-truck fa-4x text-secondary mb-2"></i>
+                                <p class="fs-5 fw-bold">Materials & Delivery</p>
+                            </div>
+                        </div>
+                        <div class="row mb-4 right">
+                            <div class="col-md-4 d-flex flex-column align-items-center text-center">
+                                <i class="fa-solid fa-tools fa-4x text-secondary mb-2"></i>
+                                <p class="fs-5 fw-bold">Execute The Concept</p>
+                            </div>
+                            <div class="col-md-4 d-flex flex-column align-items-center text-center">
+                                <i class="fa-solid fa-sun fa-4x text-secondary mb-2"></i>
+                                <p class="fs-5 fw-bold">Create A Great Atmosphere</p>
+                            </div>
+                            <div class="col-md-4 d-flex flex-column align-items-center text-center">
+                                <i class="fa-solid fa-chart-pie fa-4x text-secondary mb-2"></i>
+                                <p class="fs-5 fw-bold">Evaluation & Reporting</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Right Column -->
+                </div>
+            </div>
+        </section>
+        <!-- Services -->
+
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
     </body>
