--- a/yavin-office-design/index.html
+++ b/yavin-office-design/index.html
@@ -182,7 +182,7 @@
                     <!-- Left Colum -->
                     <div class="col-lg-5">
                         <div class="text-container text-center text-lg-start">
-                            <h2><span class="text-secondary">Services</span> that we offer:</h2>
+                            <h2><span class="text-secondary">Services</span> That We Offer</h2>
                             <p>At our company, we provide a wide range of services to meet all your office design needs.
                                 With our expertise and attention to detail, we ensure that every aspect of your office
                                 space is carefully considered and executed.</p>
@@ -272,6 +272,88 @@
             </div>
         </section>
         <!-- Get Quote -->
+
+        <!-- Projects -->
+        <section class="projects py-6" id="projects">
+            <div class="container">
+                <h2 class="text-center pb-4">Some of Our <span class="text-secondary">Projects</span></h2>
+                <!-- Projects Row 1 -->
+                <div class="row mb-4">
+                    <div class="col-md-4">
+                        <div class="card border-0">
+                            <img src="images/project-1.jpg" alt="" />
+                            <div class="card-body">
+                                <h5 class="card-title">Office Space for Banking</h5>
+                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore,
+                                    atque!</p>
+                                <a href="article.html" class="btn btn-primary">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card border-0">
+                            <img src="images/project-2.jpg" alt="" />
+                            <div class="card-body">
+                                <h5 class="card-title">Planning & Design for Startup</h5>
+                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore,
+                                    atque!</p>
+                                <a href="article.html" class="btn btn-primary">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card border-0">
+                            <img src="images/project-3.jpg" alt="" />
+                            <div class="card-body">
+                                <h5 class="card-title">Colors & Materials Update</h5>
+                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore,
+                                    atque!</p>
+                                <a href="article.html" class="btn btn-primary">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Projects Row 1 -->
+                <!-- Projects Row 2 -->
+                <div class="row mb-4">
+                    <div class="col-md-4">
+                        <div class="card border-0">
+                            <img src="images/project-4.jpg" alt="" />
+                            <div class="card-body">
+                                <h5 class="card-title">Analysis & Floor Design</h5>
+                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore,
+                                    atque!</p>
+                                <a href="article.html" class="btn btn-primary">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card border-0">
+                            <img src="images/project-5.jpg" alt="" />
+                            <div class="card-body">
+                                <h5 class="card-title">Office Space Decoration</h5>
+                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore,
+                                    atque!</p>
+                                <a href="article.html" class="btn btn-primary">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card border-0">
+                            <img src="images/project-6.jpg" alt="" />
+                            <div class="card-body">
+                                <h5 class="card-title">Playground for Kindergarten</h5>
+                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore,
+                                    atque!</p>
+                                <a href="article.html" class="btn btn-primary">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Projects Row 2 -->
+            </div>
+        </section>
+        <!-- Projects -->
 
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
