--- a/yavin-office-design/index.html
+++ b/yavin-office-design/index.html
@@ -281,7 +281,7 @@
                 <div class="row mb-4">
                     <div class="col-md-4">
                         <div class="card border-0">
-                            <img src="images/project-1.jpg" alt="" />
+                            <img src="images/project-1.jpg" alt="Banking Supplies" />
                             <div class="card-body">
                                 <h5 class="card-title">Office Space for Banking</h5>
                                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore,
@@ -292,7 +292,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card border-0">
-                            <img src="images/project-2.jpg" alt="" />
+                            <img src="images/project-2.jpg" alt="Planning Materials" />
                             <div class="card-body">
                                 <h5 class="card-title">Planning & Design for Startup</h5>
                                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore,
@@ -303,7 +303,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card border-0">
-                            <img src="images/project-3.jpg" alt="" />
+                            <img src="images/project-3.jpg" alt="Calculator" />
                             <div class="card-body">
                                 <h5 class="card-title">Colors & Materials Update</h5>
                                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore,
@@ -318,7 +318,7 @@
                 <div class="row mb-4">
                     <div class="col-md-4">
                         <div class="card border-0">
-                            <img src="images/project-4.jpg" alt="" />
+                            <img src="images/project-4.jpg" alt="Office Supply Design" />
                             <div class="card-body">
                                 <h5 class="card-title">Analysis & Floor Design</h5>
                                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore,
@@ -329,7 +329,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card border-0">
-                            <img src="images/project-5.jpg" alt="" />
+                            <img src="images/project-5.jpg" alt="Highlighters" />
                             <div class="card-body">
                                 <h5 class="card-title">Office Space Decoration</h5>
                                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore,
@@ -340,7 +340,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card border-0">
-                            <img src="images/project-6.jpg" alt="" />
+                            <img src="images/project-6.jpg" alt="Stationary" />
                             <div class="card-body">
                                 <h5 class="card-title">Playground for Kindergarten</h5>
                                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore,
@@ -355,6 +355,79 @@
         </section>
         <!-- Projects -->
 
+        <!-- Testimonials -->
+        <section class="testimonials bg-light py-6" id="testimonials">
+            <div class="carousel slide" id="testimonialCarousel">
+                <!-- Carousel Inner -->
+                <div class="carousel-inner">
+                    <!-- Slide 1 -->
+                    <div class="carousel-item active">
+                        <div class="d-flex flex-column justify-content-center align-items-center text-center">
+                            <img src="images/testimonial-1.jpg" alt="Marlene Visconte Portrait" class="rounded-circle"
+                                width="120">
+                            <p class="w-50 my-4 fst-italic fs-4 mb-4">
+                                "The products and services provided for office spaces and decor are exceptional. The
+                                furniture is modern and comfortable, adding a touch of elegance to the workspace. The
+                                decor is unique and creates a professional yet cozy atmosphere. They provide fast
+                                delivery and installation services. Overall, I highly recommend their products and
+                                services for all your office needs. Out productivity has now increase due to this
+                                welcoming cultural setting."
+                            </p>
+                            <div class="fw-bold fs-5 mt-4">Marlene Visconte</div>
+                            <div>General Manger - Scouter</div>
+                        </div>
+                    </div>
+                    <!-- Slide 1 -->
+                    <!-- Slide 2 -->
+                    <div class="carousel-item">
+                        <div class="d-flex flex-column justify-content-center align-items-center text-center">
+                            <img src="images/testimonial-2.jpg" alt="John Spiker Portrait" class="rounded-circle"
+                                width="120">
+                            <p class="w-50 my-4 fst-italic fs-4 mb-4">
+                                "The office decoration for this tech company was impressive. The space had a modern and
+                                minimalist feel to it with simple furniture and clean lines. The walls were adorned with
+                                colorful murals and motivational quotes designed to inspire creativity and innovation.
+                                The overall design created a welcoming and inspiring environment
+                                that was sure to boost productivity and creativity among employees.""
+                            </p>
+                            <div class="fw-bold fs-5 mt-4">John Spiker</div>
+                            <div>Team Leader - Vanquish</div>
+                        </div>
+                    </div>
+                    <!-- Slide 2 -->
+                    <!-- Slide 3 -->
+                    <div class="carousel-item">
+                        <div class="d-flex flex-column justify-content-center align-items-center text-center">
+                            <img src="images/testimonial-3.jpg" alt="Stella Virtuoso Portrait" class="rounded-circle"
+                                width="120">
+                            <p class="w-50 my-4 fst-italic fs-4 mb-4">
+                                "The room decorations and design for the startup company in Austin, TX are modern,
+                                stylish, and on-trend. The space features a mix of vibrant colors and clean lines,
+                                creating a dynamic and energetic atmosphere. The final outcome was a visually stunning
+                                and eco-friendly workspace for clients and
+                                employees alike. I highly recommend this decoration company for their exceptional
+                                talent and attention to detail."
+                            </p>
+                            <div class="fw-bold fs-5 mt-4">Stella Virtuoso</div>
+                            <div>Design Chief - Bikegirl</div>
+                        </div>
+                    </div>
+                    <!-- Slide 3 -->
+                </div>
+                <!-- Carousel Inner -->
+                <!-- Carousel Buttons -->
+                <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel"
+                    data-bs-slide="prev">
+                    <i class="fa-solid fa-circle-arrow-left fa-3x text-secondary"></i>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel"
+                    data-bs-slide="next">
+                    <i class="fa-solid fa-circle-right fa-3x text-secondary"></i>
+                </button>
+                <!-- Carousel Buttons -->
+            </div>
+        </section>
+        <!-- Testimonials -->
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
     </body>
